Code cleanup and align fixes

--- a/blocks/reskill/reskill.css
+++ b/blocks/reskill/reskill.css
@@ -1,5 +1,5 @@
 .reskill {
-	padding: 16px 0px 32px 0;
+	padding: 16px 16px 32px 16px;
 }
 
 @media (width >=900px) {
